app/assets/stylesheets/main.scss
:root {
  --main-color: #027af4;
  --accessible-main-color: #0156ac;
  --secondary-color: #e8f2ff;
  --alt-colour: #4c58c6;
}

@mixin thick-border($width: 3px) {
  border: $width solid var(--main-color);
  border-radius: 5px;
}

@mixin transition() {
  transition: all 0.2s ease;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
  background-color: var(--secondary-color);
  margin: 0;
}

input, button {
  font: inherit;
}

ul, ol {
  padding-left: 1rem;
}

.container {
  max-width: 960px;
  margin: 0 auto
}

.debug_dump {
  margin-top: 3rem;
  padding: 1rem;
  border: 1px solid gray;
  border-radius: 5px;
  font-size: 1rem;
  overflow: scroll;
  display: none;
}

.error {
  color: red;
}

.map-container {
  margin: 0 0.4rem;
}

.map-overlay {
  position: absolute;
  width: 78vw; // FIXME this was a quick fix to prevent overflow
  max-width: 400px;
  background-color: #fff;
  border-radius: 5px;
  z-index: 1;
  border: 1px solid gray;
  padding: 1rem 2rem;
  min-height: 200px;

  .rating {
    color: #333;
  }
}

.hidden {
  display: none;
}

/* HEADER / LOGO */

.logo {
  display: flex;
  justify-content: center;

  img {
    max-width: 100%;
    height: auto;
    display: block;
  }
}

/* FORM */

.search-form {
  input {
    padding: 0.5rem 1rem;
    @include transition();
  }

  .sector-select {
    border: 3px solid var(--main-color);
    border-radius: 5px;
    display: grid;
    grid-template-columns: repeat(auto-fit, 16rem);
    justify-content: center;
    justify-items: stretch;
    padding: 1rem 0;
    margin: 0 0.4rem;
    gap: 1rem;
    color: #444;

    legend {
      font-style: italic;
      font-weight: bold;
      padding: 0 1rem;
      font-size: 1.2rem;
      color: black;
    }

    input[type="radio"] {
      width: 0;
      height: 0;
      position: absolute;
      opacity: 0;
      left: -1000px;
    }

    .sector-label {
      @include transition();
      padding: 0.5rem 1rem;
      border: 2px solid #777;
      border-radius: 5px;
      display: flex;
      cursor: pointer;
    }

    .sector-icon {
      max-height: 1rem;
      padding-right: 0.6rem;
      // generated at: https://codepen.io/sosuke/pen/Pjoqqp
      @include transition();
      filter: brightness(0) saturate(0%) invert(26%) sepia(0%) hue-rotate(295deg) brightness(101%) contrast(97%);
    }


    input:checked ~ .sector-label, .sector-label:hover, .sector-label:focus {
      color: var(--alt-colour);
      border-color: var(--alt-colour);

      .sector-icon {
        filter: brightness(0) saturate(0%) invert(35%) sepia(46%) saturate(1278%) hue-rotate(204deg) brightness(91%) contrast(96%);
      }
    }

    input:checked ~ .sector-label {
      font-weight: bolder;
      background-color: #fff;
    }
  }

  .main-fields {
    display: grid;
    gap: 1rem;
    align-items: baseline;
    margin: 1rem;

    label {
      font-weight: bold;
    }
  }

  .location-input {
    display: grid;
    gap: 1rem;
  }

  .field {
    display: contents;
  }

  input[type="text"], input[type="number"] {
    @include thick-border(2px);

    &:focus {
      outline: none;
      box-shadow: 0 0 1px 1px var(--alt-colour);
    }
  }
}

// BUTTON STYLES

.btn {
  cursor: pointer;
  font-weight: bold;
  padding: 0.5rem 1rem;
  text-decoration: none;
  @include thick-border(2px);
  @include transition();

  &:hover {
    filter: brightness(1.2);
    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.4);
  }
}

.main-btn {
  color: white;
  background-color: var(--main-color);
  border: none;
}

.secondary-btn {
  background-color: #fff;
  color: var(--accessible-main-color);
}

.submit-btn {
  font-size: 1.1rem;
}

/* RESULTS LIST SECTION */

.results {
  h2 {
    text-align: center;
  }

  table {
    border-collapse: collapse;
    margin: 0 auto;
    @include thick-border();
  }


  td, th {
    border: 1px solid var(--alt-colour);
    border-collapse: collapse;
  }

  th, td {
    padding: 0.4rem;
  }
}

.footer {
  margin-top: 3rem;
  padding: 2rem 0;
  background-color: var(--accessible-main-color);
  color: #fff;

  .container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  .about, .disclaimer {
    margin: 0 0.5rem;
  }

  .about {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    text-align: center;
    gap: 0.8rem;

    .copyright {
      font-style: italic;
    }

    .website-author a {
      display: inline-flex;
      align-items: flex-end;
      gap: 0.4rem;
      color: inherit;

      .footer-icon {
        filter: invert(99%);
      }
    }
  }
}

/* DESKTOP STYLES */

@media (min-width: 960px) {
  .main-fields {
    grid-template-columns: 15rem auto auto;
    gap: 2rem 1rem;
  }

  .logo a {
    padding: 0 5rem;
  }

  .search-form {
    .sector-select {
      grid-template-columns: repeat(auto-fit, 13.5rem);
    }
  }

  .footer .about {
    flex-direction: row;
  }
}

